Fix menu spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -97,27 +97,25 @@ body > header:after {
 }
 /* line 17, ../sass/header.scss */
 body > header #logo {
-  position: relative;
-  float: left;
+  position: absolute;
   margin-top: 20px;
-  left: -75px;
+  left: 5px;
 }
-/* line 24, ../sass/header.scss */
+/* line 23, ../sass/header.scss */
 body > header nav {
   position: relative;
   display: inline-block;
   float: right;
 }
-/* line 29, ../sass/header.scss */
+/* line 28, ../sass/header.scss */
 body > header nav > ul {
   display: inline-block;
   padding-top: 50px;
-  float: left;
 }
-/* line 33, ../sass/header.scss */
+/* line 31, ../sass/header.scss */
 body > header nav > ul > li {
   position: relative;
-  margin-left: 32px;
+  margin-left: 45px;
   vertical-align: top;
   display: inline-block;
   background-color: white;
@@ -142,26 +140,26 @@ body > header nav > ul > li ul {
 body > header nav > ul > li:hover ul {
   max-height: 400px !important;
 }
-/* line 40, ../sass/header.scss */
+/* line 38, ../sass/header.scss */
 body > header nav > ul > li figure {
   margin-bottom: 5px;
 }
-/* line 42, ../sass/header.scss */
+/* line 40, ../sass/header.scss */
 body > header nav > ul > li figure .normal {
   display: block;
 }
-/* line 45, ../sass/header.scss */
+/* line 43, ../sass/header.scss */
 body > header nav > ul > li figure .active {
   display: none;
 }
-/* line 49, ../sass/header.scss */
+/* line 47, ../sass/header.scss */
 body > header nav > ul > li ul {
   position: absolute;
   overflow: hidden;
   background-color: white;
   width: 200px;
 }
-/* line 54, ../sass/header.scss */
+/* line 52, ../sass/header.scss */
 body > header nav > ul > li ul li {
   font-family: 'Ruluko';
   color: #707070;
@@ -181,15 +179,15 @@ body > header nav > ul > li ul li a, body > header nav > ul > li ul li a:link a:
 body > header nav > ul > li ul li a:hover, body > header nav > ul > li ul li a.activer {
   color: #84acb0;
 }
-/* line 61, ../sass/header.scss */
+/* line 59, ../sass/header.scss */
 body > header nav > ul li:hover figure {
   border-bottom: 1px dotted black;
 }
-/* line 63, ../sass/header.scss */
+/* line 61, ../sass/header.scss */
 body > header nav > ul li:hover figure .normal {
   display: none;
 }
-/* line 66, ../sass/header.scss */
+/* line 64, ../sass/header.scss */
 body > header nav > ul li:hover figure .active {
   display: block;
 }
